@@ -1,5 +1,12 @@
 2019-04-28  Mark Wielaard  <mark@klomp.org>
 
+	* size.c (show_sysv): Call INTERNAL_ERROR if gelf_getshdr
+	returns NULL.
+	(show_sysv_one_line): Call error with EXIT_FAILURE if
+	gelf_getshdr returns NULL.
+
+2019-04-28  Mark Wielaard  <mark@klomp.org>
+
 	* nm.c (show_symbols_sysv): Check gelf_getshdr doesn't return
 	NULL. Simplify naming of invalid sections, don't use alloca.
 
